# gp2gp3

./: .gitignore  Makefile  README.md  app.py  printjson.py  pyproject.toml  sample-config.json
chalicelib/: account.py  primary.py  secondary.py  snow.py  volumes.py  wflambda.py
cloudformation/: gp23-director-role.yaml  gp23-worker-role.yaml
doc/: README.md  code.md  director.md  worker.md  workerthread.md
tests/: test_account.py  test_secondary.py  test_snow.py  test_volumes.py
