[tool.poetry]
name = "gp2gp3"
version = "0.2.1"
description = "Automatically migrate from gp2 EBS Volumes to gp3"
authors = ["ccdale <chris.allison@centrica.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/CentricaDevOps/gp2gp3.git"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.48"
wavefront-pyformance = "^1.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
chalice = "^1.22.3"
awslogs = "^0.14.0"

[tool.poetry.scripts]
jprint = "printjson:jprint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
